<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <RadioGroup
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/RdbNotificacion"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/notificaciones"
                android:button="@null"
                android:gravity="center"
                android:background="@drawable/bg_radiobutton_menu_configuracion"
                android:checked="true"/>
            <RadioButton
                android:id="@+id/RdbTemas"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/temas"
                android:button="@null"
                android:gravity="center"
                android:background="@drawable/bg_radiobutton_menu_configuracion"/>
            <RadioButton
                android:id="@+id/RdbGraficos"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/graficos"
                android:button="@null"
                android:gravity="center"
                android:background="@drawable/bg_radiobutton_menu_configuracion"/>
            <RadioButton
                android:id="@+id/RdbIdioma"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/idioma"
                android:button="@null"
                android:gravity="center"
                android:background="@drawable/bg_radiobutton_menu_configuracion"/>
        </RadioGroup>

    </LinearLayout>

     <FrameLayout
        android:id="@+id/FrContentMenuConfig"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"/>

</LinearLayout>