<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/FrContentMenu"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="15">
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:gravity="center">

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:background="@color/black">

            <RadioButton
                android:id="@+id/btnInicio"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/inicio"
                android:textStyle="bold"
                android:button="@null"
                android:gravity="center"
                android:background="@drawable/bg_radiobutton_menu"
                android:checked="true"
                />

            <RadioButton
                android:id="@+id/btnTutorial"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/tutorial"
                android:textStyle="bold"
                android:button="@null"
                android:gravity="center"
                android:background="@drawable/bg_radiobutton_menu"
                />

            <RadioButton
                android:id="@+id/btnPerfil"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/perfil"
                android:textStyle="bold"
                android:button="@null"
                android:gravity="center"
                android:background="@drawable/bg_radiobutton_menu"
                />

            <RadioButton
                android:id="@+id/btnConfiguracion"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/configuracion"
                android:textStyle="bold"
                android:button="@null"
                android:gravity="center"
                android:background="@drawable/bg_radiobutton_menu"
                />

        </RadioGroup>






    </LinearLayout>




</LinearLayout>